--- a/Final project/index.html
+++ b/Final project/index.html
@@ -1,95 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hiking Adventures</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Salsa - My hobby 💃</title>
     <style>
-        body {
-            background-image: linear-gradient(to right, #1e3c72, #2a5298);
-            color: #fff;
-            width: 60%;
-            margin: 50px auto;
-            font-family: "Arial", sans-serif;
-            text-align: center;
-        }
+      body {
+        background: linear-gradient(
+          68.6deg,
+          rgb(252, 165, 241) 1.8%,
+          rgb(181, 255, 255) 100.5%
+        );
+      }
 
-        h1 {
-            font-size: 3em;
-            font-weight: bold;
-            border: 2px solid #fff;
-            padding: 15px;
-            border-radius: 5px;
-            margin-bottom: 20px;
-        }
+      h1 {
+        text-align: center;
+      }
 
-        h2 {
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
+      h2 {
+        text-align: center;
+      }
 
-        p {
-            line-height: 1.6;
-            font-size: 1.2em;
-        }
+      img {
+        max-width: 100%;
+      }
 
-        img {
-            margin: 20px auto;
-            display: block;
-            border-radius: 10px;
-            max-width: 100%;
-        }
+      p {
+        font-size: 18px;
+        line-height: 1.5;
+      }
 
-        button {
-            background: rgba(255, 255, 255, 0.1);
-            border: 2px solid #fff;
-            font-size: 1.2em;
-            border-radius: 5px;
-            color: #fff;
-            padding: 10px 20px;
-            transition: background-color 0.3s ease;
-            cursor: pointer;
-            margin: 20px auto;
-            display: block;
-        }
+      button {
+        display: block;
+        margin: 0 auto;
+        border: 1px solid plum;
+        background: white;
+        font-size: 20px;
+        border-radius: 6px;
+        padding: 10px 15px;
+        transition: all 150ms ease-in-out;
+      }
 
-        button:hover {
-            background-color: rgba(255, 255, 255, 0.2);
-        }
+      button:hover {
+        background: plum;
+        cursor: pointer;
+      }
+      .container {
+        max-width: 600px;
+        margin: 20px auto;
+        background: white;
+        padding: 20px;
+        border-radius: 10px;
+      }
 
-        a {
-            color: #fff;
-            text-decoration: underline;
-        }
+      footer {
+        text-align: center;
+        margin: 10px 0;
+        font-size: 18px;
+      }
 
-        small {
-            display: block;
-            margin-top: 20px;
-        }
+      .theme-button {
+        font-size: 10px;
+        background: black;
+        color: white;
+        padding: 5 8px;
+      }
+
+      .theme-button:hover {
+        color: black;
+        background: white;
+      }
+
+      .salsa-intro-picture {
+        border-radius: 10px;
+        transition: all 150ms ease-in-out;
+      }
+
+      .salsa-intro-picture:hover {
+        filter: contrast(80%);
+        transform: scale(1.1);
+      }
+
+      .grid {
+        margin: 15px 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-gap: 20px;
+      }
+
+      .grid img {
+        width: 100%;
+        border-radius: 8px;
+        transition: all 150ms ease-in-out;
+      }
+
+      .grid img:hover {
+        transform: scale(2);
+      }
+
+      .dark {
+        background: linear-gradient(
+          112.1deg,
+          rgb(32, 38, 57) 11.4%,
+          rgb(63, 76, 119) 70.2%
+        );
+        color: white;
+      }
+
+      .dark .container {
+        background: rgba(255, 255, 255, 0.1);
+      }
+
+      .dark a {
+        color: plum;
+      }
     </style>
-</head>
-<body>
-    <h1>Embrace the Outdoors</h1>
-    <h2>Discover the Joy of Hiking</h2>
-    <hr>
-    <img src="https://www.nps.gov/subjects/trails/parks/iuva/Long-Barn-Loop-04.jpg" alt="Hiking image">
-    <hr>
-    <p>
-        <strong>Hiking</strong> is a great way to experience nature, get some exercise, and enjoy the great outdoors. Whether you're hiking up a mountain or strolling through a forest, there's always something new to discover. Embrace the tranquility and adventure that hiking offers, and connect with nature on a deeper level.
-    </p>
-    <small><a href="https://en.wikipedia.org/wiki/Hiking" target="_blank">Learn more about Hiking</a></small>
-    <button onclick="getUserInfo()">Join a Hiking Group</button>
+  </head>
+  <body>
+    <button class="theme-button">Change theme</button>
+    <div class="container">
+      <h1>💃 What is Salsa?</h1>
+      <h2>My favorite type of dance</h2>
+      <a href="https://en.wikipedia.org/wiki/Salsa_(dance)" target="_blank">
+        <img
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/046/122/original/salsa-header.jpg?1663066724"
+          alt=""
+          class="salsa-intro-picture"
+        />
+      </a>
+      <div class="grid">
+        <img
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/046/123/original/salsa-grid-1.jpg?1663066729"
+          alt=""
+        />
+        <img
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/046/124/original/salsa-grid-2.jpg?1663066734"
+          alt=""
+        />
+        <img
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/046/125/original/salsa-grid-3.jpg?1663066738"
+          alt=""
+        />
+        <img
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/046/126/original/salsa-grid-4.jpg?1663066742"
+          alt=""
+        />
+      </div>
+      <p>
+        Salsa is a Latin dance, associated with the music genre of the same
+        name, which was first popularized in the United States in the 1960s in
+        New York City. Salsa is a combination of Cuban dances, such as mambo,
+        pachanga and rumba, as well as American dances such as swing and tap
+        <br /><br />
+        📖
+        <a href="https://en.wikipedia.org/wiki/Salsa_(dance)">
+          <strong> Read on Wikipedia </strong>
+        </a>
+      </p>
+    </div>
+    <footer>
+      Coded with 💜 by
+      <a href="https://www.shecodes.io/" target="_blank">Matt Delac</a>
+    </footer>
 
     <script>
-        function getUserInfo() {
-            let name = prompt('What is your name?');
-            if (name) {
-                alert('Thanks, ' + name + '! We will be in touch. Meanwhile, enjoy your hiking adventures!');
-                document.body.innerHTML += "<h2>Welcome, " + name + "!</h2><p>We're excited to have you join our hiking community.</p>";
-            } else {
-                alert('Please enter your name to join the hiking group.');
-            }
+      function changeTheme() {
+        let body = document.querySelector("body");
+
+        // body.classList.toggle("dark");
+
+        if (body.classList.contains("dark")) {
+          body.classList.remove("dark");
+        } else {
+          body.classList.add("dark");
         }
+      }
+
+      let themeButton = document.querySelector(".theme-button");
+      themeButton.addEventListener("click", changeTheme);
     </script>
-</body>
+  </body>
 </html>
