--- a/Final project/index.html
+++ b/Final project/index.html
@@ -161,7 +161,7 @@
     </div>
     <footer>
       Coded with 💜 by
-      <a href="https://www.shecodes.io/" target="_blank">Matt Delac</a>
+      <a href="https://www.shecodes.io/" target="_blank">Anne Apiyo</a>
     </footer>
 
     <script>
